--- a/style.css
+++ b/style.css
@@ -9,6 +9,34 @@
     grid-gap: 10px;
 
 }
+.right-content-container{
+    position: relative;
+}
+.formcontainer{
+    display:flex;
+    flex-direction: column;
+    width:100%;
+    border:none;
+    position: absolute;
+    bottom:0px;
+    right:0px;
+    background-color: rgba(255, 255, 255, 0.925); 
+    z-index: 2;
+    height:100%;
+    transition:3s all;
+}
+.formcontainer textarea{
+    resize:none;
+    height:80%;
+    border:none
+}
+.formcontainer input{
+    border:none
+}
+.formcontainer.hidden{
+ width:0%;
+ 
+}
 .right-panel{
     display: inline-block;
     position:relative;
@@ -50,7 +78,7 @@
 button{
     border:none;
     padding:3px;
-    
+
 }
 
 
